--- a/1.2/Source/VEE/MigrationBackup/6ae31a36/VEE/VEE.csproj
+++ b/1.2/Source/VEE/MigrationBackup/6ae31a36/VEE/VEE.csproj
@@ -34,6 +34,33 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Lib.Harmony.2.0.4\lib\net472\0Harmony.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>..\..\..\..\..\..\Rimworld12\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="UnityEngine.CoreModule">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.TextCoreModule">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextCoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>..\..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="HarmonyInit.cs" />
     <Compile Include="Heddifs\HeddifCompPropreties_MightJoin.cs" />
     <Compile Include="Heddifs\HeddifCompPropreties_StandOff.cs" />
@@ -44,9 +71,9 @@
     <Compile Include="Heddifs\HeddifComp_Traitor.cs" />
     <Compile Include="MapComp_Drought.cs" />
     <Compile Include="Others\IncidentWorker_MakeGameConditionVEE.cs" />
+    <Compile Include="Others\WorldLayerRegenerateBiomes.cs" />
     <Compile Include="PurpleEvents\GlobalWarming.cs" />
     <Compile Include="PurpleEvents\LongNight.cs" />
-    <Compile Include="PurpleEvents\PlanetEvent.cs" />
     <Compile Include="PurpleEvents\PsychicBloom.cs" />
     <Compile Include="PurpleEvents\PsychicRain.cs" />
     <Compile Include="RegularEvents\AnimalTransportPodCrash.cs" />
@@ -66,20 +93,15 @@
     <Compile Include="Others\ThingSetMaker_AnimalPod.cs" />
     <Compile Include="RegularEvents\WeaponPod.cs" />
     <Compile Include="RegularEvents\WildMenWanderIn.cs" />
-    <Compile Include="Settings\DefsAlterer.cs" />
-    <Compile Include="Settings\VEEMod.cs" />
-    <Compile Include="Settings\VEESettings.cs" />
+    <Compile Include="Settings\VEE_ModSettings.cs" />
+    <Compile Include="Settings\VEE_Mod.cs" />
+    <Compile Include="Settings\WorldCompPostApplySettings.cs" />
     <Compile Include="VEE_DefOf.cs" />
     <Compile Include="PurpleEvents\IceAge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.3.3052-beta</Version>
-    </PackageReference>
-    <PackageReference Include="Lib.Harmony" ExcludeAssets="runtime">
-      <Version>2.1.0</Version>
-    </PackageReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
