--- a/1.3/Source/VEE/VEE.csproj
+++ b/1.3/Source/VEE/VEE.csproj
@@ -76,10 +76,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Krafs.Rimworld.Ref">
-      <Version>1.3.3060-beta</Version>
+      <Version>1.3.3142-beta</Version>
     </PackageReference>
     <PackageReference Include="Lib.Harmony" ExcludeAssets="runtime">
-      <Version>2.1.0</Version>
+      <Version>2.1.1</Version>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
