--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 # Ce fichier .gitignore a été automatiquement créé par Microsoft(R) Visual Studio.
 ################################################################################
 
-/1.3/Source/VEE/.vs
-/1.3/Source/VEE/obj/Debug
+/1.3/Source/VEE/.vs/
+/1.3/Source/VEE/obj/
