Introduced purple event global cooldown and settings for it

--- a/1.3/Source/VEE/VEE.csproj
+++ b/1.3/Source/VEE/VEE.csproj
@@ -42,7 +42,8 @@
     <Compile Include="Jobs\JobDriver_HuntAndLeave.cs" />
     <Compile Include="Heddifs\HeddifCompPropreties_Traitor.cs" />
     <Compile Include="Heddifs\HeddifComp_Traitor.cs" />
-    <Compile Include="MapComp_Drought.cs" />
+    <Compile Include="Comps\MapComp_Drought.cs" />
+    <Compile Include="Comps\WorldComp_Purple.cs" />
     <Compile Include="Others\IncidentWorker_MakeGameConditionVEE.cs" />
     <Compile Include="PurpleEvents\GlobalWarming.cs" />
     <Compile Include="PurpleEvents\LongNight.cs" />
