--- a/Source/VEE/VEE.csproj
+++ b/Source/VEE/VEE.csproj
@@ -36,11 +36,9 @@
   <ItemGroup>
     <Compile Include="HarmonyInit.cs" />
     <Compile Include="Heddifs\HeddifCompPropreties_MightJoin.cs" />
-    <Compile Include="Heddifs\HeddifCompPropreties_StandOff.cs" />
     <Compile Include="Heddifs\HeddifComp_MightJoin.cs" />
-    <Compile Include="Heddifs\HeddifComp_StandOff.cs" />
     <Compile Include="Jobs\JobDriver_HuntAndLeave.cs" />
-    <Compile Include="Heddifs\HeddifCompPropreties_Traitor.cs" />
+    <Compile Include="Heddifs\HediffCompProperties\HeddifCompPropreties_Traitor.cs" />
     <Compile Include="Heddifs\HeddifComp_Traitor.cs" />
     <Compile Include="Comps\MapComp_Drought.cs" />
     <Compile Include="Comps\WorldComp_Purple.cs" />
