--- a/Source/VEE/VEE.csproj
+++ b/Source/VEE/VEE.csproj
@@ -35,11 +35,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="HarmonyInit.cs" />
-    <Compile Include="Heddifs\HediffCompProperties\HediffCompPropreties_MightJoin.cs" />
-    <Compile Include="Heddifs\HediffComp_MightJoin.cs" />
+    <Compile Include="Hediffs\HediffCompProperties\HediffCompPropreties_MightJoin.cs" />
+    <Compile Include="Hediffs\HediffComp_MightJoin.cs" />
     <Compile Include="Jobs\JobDriver_HuntAndLeave.cs" />
-    <Compile Include="Heddifs\HediffCompProperties\HeddifCompPropreties_Traitor.cs" />
-    <Compile Include="Heddifs\HeddifComp_Traitor.cs" />
+    <Compile Include="Hediffs\HediffCompProperties\HediffCompPropreties_Traitor.cs" />
+    <Compile Include="Hediffs\HediffComp_Traitor.cs" />
     <Compile Include="Comps\MapComp_Drought.cs" />
     <Compile Include="Comps\WorldComp_Purple.cs" />
     <Compile Include="Others\IncidentWorker_MakeGameCondition.cs" />
