cleanup and organize

--- a/Source/VEE/VEE.csproj
+++ b/Source/VEE/VEE.csproj
@@ -37,38 +37,42 @@
     <Compile Include="HarmonyInit.cs" />
     <Compile Include="Hediffs\HediffCompProperties\HediffCompPropreties_MightJoin.cs" />
     <Compile Include="Hediffs\HediffComp_MightJoin.cs" />
+    <Compile Include="IncidentWorker\IncidentWorker_MakeGameConditionNoLetter.cs" />
     <Compile Include="Jobs\JobDriver_HuntAndLeave.cs" />
     <Compile Include="Hediffs\HediffCompProperties\HediffCompPropreties_Traitor.cs" />
     <Compile Include="Hediffs\HediffComp_Traitor.cs" />
-    <Compile Include="Comps\MapComp_Drought.cs" />
-    <Compile Include="Comps\WorldComp_Purple.cs" />
-    <Compile Include="Others\IncidentWorker_MakeGameConditionPurple.cs" />
-    <Compile Include="PurpleEvents\GlobalWarming.cs" />
-    <Compile Include="PurpleEvents\LongNight.cs" />
-    <Compile Include="PurpleEvents\PlanetEvent.cs" />
-    <Compile Include="PurpleEvents\PsychicBloom.cs" />
-    <Compile Include="PurpleEvents\PsychicRain.cs" />
+    <Compile Include="Jobs\JobGiver_AICarryDutyFocusAndExit.cs" />
+    <Compile Include="Jobs\LordJob_HuntingParty.cs" />
+    <Compile Include="Jobs\LordToil_Hunt.cs" />
+    <Compile Include="MapComponent\MapComp_Drought.cs" />
+    <Compile Include="WorldComponent\WorldComp_Purple.cs" />
+    <Compile Include="IncidentWorker\IncidentWorker_MakeGameConditionPurple.cs" />
+    <Compile Include="GameCondition\GlobalWarming.cs" />
+    <Compile Include="GameCondition\LongNight.cs" />
+    <Compile Include="GameCondition\PlanetEvent.cs" />
+    <Compile Include="GameCondition\PsychicBloom.cs" />
+    <Compile Include="GameCondition\PsychicRain.cs" />
     <Compile Include="QuestNode_Root_WandererJoinTraitor_WalkIn.cs" />
-    <Compile Include="RegularEvents\AnimalTransportPodCrash.cs" />
-    <Compile Include="RegularEvents\ApparelPod.cs" />
-    <Compile Include="RegularEvents\battleAnimal.cs" />
-    <Compile Include="RegularEvents\CaravanAnimalWI.cs" />
-    <Compile Include="RegularEvents\Cropsprout.cs" />
-    <Compile Include="RegularEvents\Drought.cs" />
-    <Compile Include="RegularEvents\EarthQuake.cs" />
-    <Compile Include="RegularEvents\HuntingParty.cs" />
-    <Compile Include="RegularEvents\MeteoriteShower.cs" />
-    <Compile Include="RegularEvents\ShuttleCrash.cs" />
-    <Compile Include="RegularEvents\SpaceBattle.cs" />
-    <Compile Include="RegularEvents\WandererJoinTraitor.cs" />
-    <Compile Include="Others\ShuttleInfo.cs" />
-    <Compile Include="RegularEvents\WeaponPod.cs" />
-    <Compile Include="RegularEvents\WildMenWanderIn.cs" />
+    <Compile Include="IncidentWorker\AnimalTransportPodCrash.cs" />
+    <Compile Include="IncidentWorker\ApparelPod.cs" />
+    <Compile Include="IncidentWorker\battleAnimal.cs" />
+    <Compile Include="IncidentWorker\CaravanAnimalWI.cs" />
+    <Compile Include="IncidentWorker\Cropsprout.cs" />
+    <Compile Include="IncidentWorker\Drought.cs" />
+    <Compile Include="IncidentWorker\EarthQuake.cs" />
+    <Compile Include="IncidentWorker\HuntingParty.cs" />
+    <Compile Include="IncidentWorker\MeteoriteShower.cs" />
+    <Compile Include="IncidentWorker\ShuttleCrash.cs" />
+    <Compile Include="GameCondition\SpaceBattle.cs" />
+    <Compile Include="IncidentWorker\WandererJoinTraitor.cs" />
+    <Compile Include="Building\ShuttleInfo.cs" />
+    <Compile Include="IncidentWorker\WeaponPod.cs" />
+    <Compile Include="IncidentWorker\WildMenWanderIn.cs" />
     <Compile Include="Settings\DefsAlterer.cs" />
     <Compile Include="Settings\VEEMod.cs" />
     <Compile Include="Settings\VEESettings.cs" />
     <Compile Include="VEE_DefOf.cs" />
-    <Compile Include="PurpleEvents\IceAge.cs" />
+    <Compile Include="GameCondition\IceAge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
